redo exceptions handling