@@ -3,10 +3,11 @@ package com.petproject.minivns.service.impl;
 import com.petproject.minivns.entities.Role;
 import com.petproject.minivns.repositories.RoleRepository;
 import com.petproject.minivns.service.RoleService;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class RoleServiceImpl implements RoleService {
@@ -28,7 +29,7 @@ public class RoleServiceImpl implements RoleService {
     @Override
     public Role getById(Integer id) {
         return roleRepository.findById(id).orElseThrow(
-                () -> new RuntimeException("Role id not found")
+                () -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Role with id " +id+ " is not found")
         );
     }
     @Override
@@ -37,19 +38,24 @@ public class RoleServiceImpl implements RoleService {
         if(role != null)
         return role;
         else{
-            throw new RuntimeException("Role name not found");
+            throw  new  ResponseStatusException(HttpStatus.NOT_FOUND, "Role with name " + name + " is not found");
         }
     }
 
     @Override
     public Role update(Role role) {
         List<Integer> ids = getAll().stream()
-                .map(Role::getId).collect(Collectors.toList());
-        if (role != null && ids.contains(role.getId())) {
+                .map(Role::getId).toList();
+        if(role == null){
+            throw new ResponseStatusException(HttpStatus.NO_CONTENT, "Some information was typed wrong and role cannot be updated");
+        }
+        else if (!ids.contains(role.getId())){
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Role is  not found and cannot be updated");
+        }
+        else {
             getById(role.getId()).setName(role.getName());
             return roleRepository.save(role);
         }
-        throw new RuntimeException("Role is null of not found and cannot be updated");
     }
     @Override
     public void delete(Integer id) {
@@ -57,8 +63,11 @@ public class RoleServiceImpl implements RoleService {
         if(role != null && getAll().contains(role)) {
             roleRepository.delete(role);
         }
-        else{
-            throw new RuntimeException("Role is null of not found and cannot be deleted");
+        if(role == null){
+            throw new ResponseStatusException(HttpStatus.NO_CONTENT, "There is no role to delete");
+        }
+        else if (!getAll().contains(role)){
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Role is not found and cannot be deleted");
         }
     }
 
